--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -23,3 +23,22 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+/* Solution */
+
+.header {
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+  -ms-align-items: center;
+  align-items: center;
+
+}
+
+ul {
+  display: flex;
+  gap: 4px;
+  margin: 0;
+  padding: 0;
+
+}
