--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -1,4 +1,4 @@
-/* this is some magical font-importing.  
+/* this is some magical font-importing.
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
@@ -46,3 +46,32 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* Solution */
+.header {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+
+}
+.left {
+  display: flex;
+  align-items: center;
+  }
+
+  ul {
+    display: flex;
+    gap: 8px;
+    padding: 0 16px;
+  }
+
+  .right,.left {
+    padding 0 16px;
+    margin: 0 8px;
+  }
